[package]
name = "shoes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shoes"
path = "src/bin/server.rs"

[[bin]]
name = "target"
path = "src/bin/target.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.1.0"
thiserror = "1.0"